# docs/swagger.json
@@ -17,14 +17,14 @@
     "host": "localhost:1323",
     "basePath": "/api/v1",
     "paths": {
-        "/artikels": {
+        "/api/v1/artikel": {
             "get": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Get paginated list of users",
+                "description": "Get paginated list of Artikel",
                 "consumes": [
                     "application/json"
                 ],
@@ -32,9 +32,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "artikel"
+                    "artikel/artikel"
                 ],
-                "summary": "Get list of users",
+                "summary": "Get list of Artikel",
                 "parameters": [
                     {
                         "type": "string",
@@ -85,7 +85,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Create New artikel",
+                "description": "Create New Artikel",
                 "consumes": [
                     "application/json"
                 ],
@@ -93,12 +93,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "artikel"
+                    "artikel/artikel"
                 ],
-                "summary": "Create artikel",
+                "summary": "Create Artikel",
                 "parameters": [
                     {
-                        "description": "Login Request",
+                        "description": "Create Request",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -129,14 +129,14 @@
                 }
             }
         },
-        "/artikels/{id}": {
+        "/api/v1/artikel/kategori": {
             "get": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Get artikel by :id",
+                "description": "Get paginated list of ArtikelKategori",
                 "consumes": [
                     "application/json"
                 ],
@@ -144,13 +144,265 @@
                     "application/json"
                 ],
                 "tags": [
-                    "artikel"
+                    "artikel/kategori"
                 ],
-                "summary": "Get artikel",
+                "summary": "Get list of ArtikelKategori",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Filter by name (partial match)",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page size",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.MyGoResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/dto.ArtikelKategoriResponse"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Create New ArtikelKategori",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "artikel/kategori"
+                ],
+                "summary": "Create ArtikelKategori",
+                "parameters": [
+                    {
+                        "description": "Create Request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateArtikelKategoriRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.MyGoResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.ArtikelKategoriResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/artikel/kategori/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get ArtikelKategori by :id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "artikel/kategori"
+                ],
+                "summary": "Get ArtikelKategori",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "artikel ID",
+                        "description": "ArtikelKategori ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.MyGoResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.ArtikelKategoriResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Update ArtikelKategori by :id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "artikel/kategori"
+                ],
+                "summary": "Update ArtikelKategori",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ArtikelKategori ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update Request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.UpdateArtikelKategoriRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.MyGoResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.ArtikelKategoriResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Delete ArtikelKategori by :id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "artikel/kategori"
+                ],
+                "summary": "Delete ArtikelKategori",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ArtikelKategori ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.MyGoResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/artikel/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get Artikel by :id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "artikel/artikel"
+                ],
+                "summary": "Get Artikel",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Artikel ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -183,7 +435,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Update artikel by :id",
+                "description": "Update Artikel by :id",
                 "consumes": [
                     "application/json"
                 ],
@@ -191,19 +443,19 @@
                     "application/json"
                 ],
                 "tags": [
-                    "artikel"
+                    "artikel/artikel"
                 ],
-                "summary": "Update artikel",
+                "summary": "Update Artikel",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "artikel ID",
+                        "description": "Artikel ID",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Login Request",
+                        "description": "Update Request",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -239,7 +491,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Update artikel by :id",
+                "description": "Delete Artikel by :id",
                 "consumes": [
                     "application/json"
                 ],
@@ -247,13 +499,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "artikel"
+                    "artikel/artikel"
                 ],
-                "summary": "Update artikel",
+                "summary": "Delete Artikel",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "artikel ID",
+                        "description": "Artikel ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -2208,6 +2460,32 @@
         }
     },
     "definitions": {
+        "dto.ArtikelKategoriResponse": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "created_by": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "updated_by": {
+                    "type": "integer"
+                }
+            }
+        },
         "dto.ArtikelResponse": {
             "type": "object",
             "properties": {
@@ -2296,6 +2574,23 @@
                 },
                 "old_password": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.CreateArtikelKategoriRequest": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "maxLength": 500
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 1
                 }
             }
         },
@@ -2631,6 +2926,20 @@
                 },
                 "user": {
                     "$ref": "#/definitions/dto.UserResponse"
+                }
+            }
+        },
+        "dto.UpdateArtikelKategoriRequest": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "maxLength": 500
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 1
                 }
             }
         },
