# internal/modules/artikel/routes.go
@@ -1,22 +1,0 @@
-package artikel
-
-import (
-	"neosim_go/internal/modules/artikel/handlers"
-	authMiddlewares "neosim_go/internal/modules/auth/middlewares"
-	"neosim_go/internal/shared/utils"
-
-	"github.com/labstack/echo/v5"
-	"gorm.io/gorm"
-	
-)
-
-// RegisterRoutes mendaftarkan semua routes untuk module artikel
-func RegisterRoutes(e *echo.Echo, h *handlers.ArtikelHandler, jwtManager *utils.JWTManager, db *gorm.DB) {
-	jwt := authMiddlewares.JWTMiddleware(jwtManager, db)
-	g := e.Group("/api/v1/artikels", jwt)
-	g.GET("", h.List)
-	g.GET("/:id", h.GetByID)
-	g.POST("", h.Create)
-	g.PUT("/:id", h.Update)
-	g.DELETE("/:id", h.Delete)
-}
